--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.5",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
